Hecho todo lo de ships y enlazado con member